# neural-astar-jax

./: LICENSE  README.md  pyproject.toml
notebooks/: Speed comparison between PyTorch and Jax implementations.ipynb
notebooks/draft/: Untitled.ipynb  Untitled1.ipynb  wip.ipynb
src/neural_astar_jax/planner/: astar.py  differentiable_astar.py
src/neural_astar_jax/utils/: data.py  training.py
